--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 html, body {
   font-family: Verdana;
   background-color: black;
+  text-align: center;
 }
 h1 {
   font-family: Verdana;
@@ -8,4 +9,23 @@ h1 {
   font-size: 50px;
   color: white;
   text-align: center;
+}
+.cta {
+  font-size: 16px;
+  color: Aquamarine;
+  text-align: center;
+}
+h2 {
+  font-size: 42px;
+  font-family: Verdana;
+  font-weight: 300;
+  color: white;
+}
+body {
+  font-family: Verdana;
+  font-size: 21px;
+  color: gray;
+}
+.footer {
+  text-align: right;
 }
